# lulzvm

./: .travis.yml  Cargo.toml  README.md
examples/: hello.asm  timer.asm
scripts/: pre-commit  pre-push  run_tests.sh  send_kcov.sh
src/: config.rs  lib.rs  utils.rs
src/common/: mod.rs
src/vm/: events.rs  interrupts.rs  memory.rs  mod.rs  modes.rs  opcodes.rs  registers.rs  tests.rs
tests/: vm.rs
