[package]
name = "lulzvm"
version = "0.1.0"
authors = ["Alexander Lopatin <github.com/alopatindev>"]
repository = "https://github.com/alopatindev/lulzvm"
license = "MIT"

[lib]
name = "lulzvm"
path = "src/lib.rs"
doctest = false

[dependencies]
byteorder = "0.5.3"
clap = "2.19.0"
clippy = {version="*", optional = true}
env_logger = "0.3.5"
hex = "0.2.0"
#libc = "0.2.17"
log = "0.3.6"
#quickcheck = "0.4"
#rand = "0.3.14"
#time = "0.1.35"

[features]
default = []
