[package]
name = "lulzvm"
version = "0.1.0"
authors = ["Alexander Lopatin <github.com/alopatindev>"]
repository = "https://github.com/alopatindev/lulzvm"
license = "MIT"

[lib]
name = "lulzvm"
path = "src/lib.rs"
doctest = false

[dependencies]
byteorder = "0.5.3"
clap = "2.19.0"
clippy = {version="*", optional = true}
ctrlc = { version = "2.0.1", features = ["termination"] }
env_logger = "0.3.5"
hex = "0.2.0"
log = "0.3.6"
more-asserts = "0.1.0"
stopwatch = "0.0.7"

[features]
default = []
